--- a/exam_3.html
+++ b/exam_3.html
@@ -385,7 +385,7 @@ summary {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#yxhuneprkp .gt_table {
+#vkdedjbohf .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -413,7 +413,7 @@ summary {
   /* table.border.bottom.color */
 }
 
-#yxhuneprkp .gt_heading {
+#vkdedjbohf .gt_heading {
   background-color: #FFFFFF;
   /* heading.background.color */
   border-bottom-color: #FFFFFF;
@@ -432,7 +432,7 @@ summary {
   /* heading.border.lr.color */
 }
 
-#yxhuneprkp .gt_title {
+#vkdedjbohf .gt_title {
   color: #333333;
   font-size: 125%;
   /* heading.title.font.size */
@@ -446,7 +446,7 @@ summary {
   border-bottom-width: 0;
 }
 
-#yxhuneprkp .gt_subtitle {
+#vkdedjbohf .gt_subtitle {
   color: #333333;
   font-size: 85%;
   /* heading.subtitle.font.size */
@@ -460,7 +460,7 @@ summary {
   border-top-width: 0;
 }
 
-#yxhuneprkp .gt_bottom_border {
+#vkdedjbohf .gt_bottom_border {
   border-bottom-style: solid;
   /* heading.border.bottom.style */
   border-bottom-width: 2px;
@@ -469,7 +469,7 @@ summary {
   /* heading.border.bottom.color */
 }
 
-#yxhuneprkp .gt_column_spanner {
+#vkdedjbohf .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -477,7 +477,7 @@ summary {
   padding-bottom: 4px;
 }
 
-#yxhuneprkp .gt_col_headings {
+#vkdedjbohf .gt_col_headings {
   border-top-style: solid;
   /* column_labels.border.top.style */
   border-top-width: 2px;
@@ -504,7 +504,7 @@ summary {
   /* column_labels.border.lr.color */
 }
 
-#yxhuneprkp .gt_col_heading {
+#vkdedjbohf .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   /* column_labels.background.color */
@@ -520,11 +520,11 @@ summary {
   overflow-x: hidden;
 }
 
-#yxhuneprkp .gt_sep_right {
+#vkdedjbohf .gt_sep_right {
   border-right: 5px solid #FFFFFF;
 }
 
-#yxhuneprkp .gt_group_heading {
+#vkdedjbohf .gt_group_heading {
   padding: 8px;
   /* row_group.padding */
   color: #333333;
@@ -563,7 +563,7 @@ summary {
   vertical-align: middle;
 }
 
-#yxhuneprkp .gt_empty_group_heading {
+#vkdedjbohf .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -587,20 +587,20 @@ summary {
   vertical-align: middle;
 }
 
-#yxhuneprkp .gt_striped {
+#vkdedjbohf .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
   /* row.striping.background_color */
 }
 
-#yxhuneprkp .gt_from_md > :first-child {
+#vkdedjbohf .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#yxhuneprkp .gt_from_md > :last-child {
+#vkdedjbohf .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#yxhuneprkp .gt_row {
+#vkdedjbohf .gt_row {
   padding-top: 8px;
   /* data_row.padding */
   padding-bottom: 8px;
@@ -630,7 +630,7 @@ summary {
   overflow-x: hidden;
 }
 
-#yxhuneprkp .gt_stub {
+#vkdedjbohf .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   /* stub.background.color */
@@ -647,7 +647,7 @@ summary {
   padding-left: 12px;
 }
 
-#yxhuneprkp .gt_summary_row {
+#vkdedjbohf .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* summary_row.background.color */
@@ -661,7 +661,7 @@ summary {
   padding-right: 5px;
 }
 
-#yxhuneprkp .gt_first_summary_row {
+#vkdedjbohf .gt_first_summary_row {
   padding-top: 8px;
   /* summary_row.padding */
   padding-bottom: 8px;
@@ -676,7 +676,7 @@ summary {
   /* summary_row.border.color */
 }
 
-#yxhuneprkp .gt_grand_summary_row {
+#vkdedjbohf .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* grand_summary_row.background.color */
@@ -690,7 +690,7 @@ summary {
   padding-right: 5px;
 }
 
-#yxhuneprkp .gt_first_grand_summary_row {
+#vkdedjbohf .gt_first_grand_summary_row {
   padding-top: 8px;
   /* grand_summary_row.padding */
   padding-bottom: 8px;
@@ -705,7 +705,7 @@ summary {
   /* grand_summary_row.border.color */
 }
 
-#yxhuneprkp .gt_table_body {
+#vkdedjbohf .gt_table_body {
   border-top-style: solid;
   /* table_body.border.top.style */
   border-top-width: 2px;
@@ -720,7 +720,7 @@ summary {
   /* table_body.border.bottom.color */
 }
 
-#yxhuneprkp .gt_footnotes {
+#vkdedjbohf .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   /* footnotes.background.color */
@@ -744,7 +744,7 @@ summary {
   /* footnotes.border.lr.color */
 }
 
-#yxhuneprkp .gt_footnote {
+#vkdedjbohf .gt_footnote {
   margin: 0px;
   font-size: 90%;
   /* footnotes.font.size */
@@ -752,7 +752,7 @@ summary {
   /* footnotes.padding */
 }
 
-#yxhuneprkp .gt_sourcenotes {
+#vkdedjbohf .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   /* source_notes.background.color */
@@ -776,48 +776,48 @@ summary {
   /* source_notes.border.lr.style */
 }
 
-#yxhuneprkp .gt_sourcenote {
+#vkdedjbohf .gt_sourcenote {
   font-size: 90%;
   /* source_notes.font.size */
   padding: 4px;
   /* source_notes.padding */
 }
 
-#yxhuneprkp .gt_left {
+#vkdedjbohf .gt_left {
   text-align: left;
 }
 
-#yxhuneprkp .gt_center {
+#vkdedjbohf .gt_center {
   text-align: center;
 }
 
-#yxhuneprkp .gt_right {
+#vkdedjbohf .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#yxhuneprkp .gt_font_normal {
+#vkdedjbohf .gt_font_normal {
   font-weight: normal;
 }
 
-#yxhuneprkp .gt_font_bold {
+#vkdedjbohf .gt_font_bold {
   font-weight: bold;
 }
 
-#yxhuneprkp .gt_font_italic {
+#vkdedjbohf .gt_font_italic {
   font-style: italic;
 }
 
-#yxhuneprkp .gt_super {
+#vkdedjbohf .gt_super {
   font-size: 65%;
 }
 
-#yxhuneprkp .gt_footnote_marks {
+#vkdedjbohf .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="yxhuneprkp" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="vkdedjbohf" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   <thead class="gt_header">
     <tr>
       <th colspan="2" class="gt_heading gt_title gt_font_normal gt_center" style>Correlation between Migrants and Remittances by Year</th>
@@ -878,7 +878,7 @@ summary {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#rcvlovzbdf .gt_table {
+#hnxwrdmkme .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -906,7 +906,7 @@ summary {
   /* table.border.bottom.color */
 }
 
-#rcvlovzbdf .gt_heading {
+#hnxwrdmkme .gt_heading {
   background-color: #FFFFFF;
   /* heading.background.color */
   border-bottom-color: #FFFFFF;
@@ -925,7 +925,7 @@ summary {
   /* heading.border.lr.color */
 }
 
-#rcvlovzbdf .gt_title {
+#hnxwrdmkme .gt_title {
   color: #333333;
   font-size: 125%;
   /* heading.title.font.size */
@@ -939,7 +939,7 @@ summary {
   border-bottom-width: 0;
 }
 
-#rcvlovzbdf .gt_subtitle {
+#hnxwrdmkme .gt_subtitle {
   color: #333333;
   font-size: 85%;
   /* heading.subtitle.font.size */
@@ -953,7 +953,7 @@ summary {
   border-top-width: 0;
 }
 
-#rcvlovzbdf .gt_bottom_border {
+#hnxwrdmkme .gt_bottom_border {
   border-bottom-style: solid;
   /* heading.border.bottom.style */
   border-bottom-width: 2px;
@@ -962,7 +962,7 @@ summary {
   /* heading.border.bottom.color */
 }
 
-#rcvlovzbdf .gt_column_spanner {
+#hnxwrdmkme .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -970,7 +970,7 @@ summary {
   padding-bottom: 4px;
 }
 
-#rcvlovzbdf .gt_col_headings {
+#hnxwrdmkme .gt_col_headings {
   border-top-style: solid;
   /* column_labels.border.top.style */
   border-top-width: 2px;
@@ -997,7 +997,7 @@ summary {
   /* column_labels.border.lr.color */
 }
 
-#rcvlovzbdf .gt_col_heading {
+#hnxwrdmkme .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   /* column_labels.background.color */
@@ -1013,11 +1013,11 @@ summary {
   overflow-x: hidden;
 }
 
-#rcvlovzbdf .gt_sep_right {
+#hnxwrdmkme .gt_sep_right {
   border-right: 5px solid #FFFFFF;
 }
 
-#rcvlovzbdf .gt_group_heading {
+#hnxwrdmkme .gt_group_heading {
   padding: 8px;
   /* row_group.padding */
   color: #333333;
@@ -1056,7 +1056,7 @@ summary {
   vertical-align: middle;
 }
 
-#rcvlovzbdf .gt_empty_group_heading {
+#hnxwrdmkme .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -1080,20 +1080,20 @@ summary {
   vertical-align: middle;
 }
 
-#rcvlovzbdf .gt_striped {
+#hnxwrdmkme .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
   /* row.striping.background_color */
 }
 
-#rcvlovzbdf .gt_from_md > :first-child {
+#hnxwrdmkme .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#rcvlovzbdf .gt_from_md > :last-child {
+#hnxwrdmkme .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#rcvlovzbdf .gt_row {
+#hnxwrdmkme .gt_row {
   padding-top: 8px;
   /* data_row.padding */
   padding-bottom: 8px;
@@ -1123,7 +1123,7 @@ summary {
   overflow-x: hidden;
 }
 
-#rcvlovzbdf .gt_stub {
+#hnxwrdmkme .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   /* stub.background.color */
@@ -1140,7 +1140,7 @@ summary {
   padding-left: 12px;
 }
 
-#rcvlovzbdf .gt_summary_row {
+#hnxwrdmkme .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* summary_row.background.color */
@@ -1154,7 +1154,7 @@ summary {
   padding-right: 5px;
 }
 
-#rcvlovzbdf .gt_first_summary_row {
+#hnxwrdmkme .gt_first_summary_row {
   padding-top: 8px;
   /* summary_row.padding */
   padding-bottom: 8px;
@@ -1169,7 +1169,7 @@ summary {
   /* summary_row.border.color */
 }
 
-#rcvlovzbdf .gt_grand_summary_row {
+#hnxwrdmkme .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* grand_summary_row.background.color */
@@ -1183,7 +1183,7 @@ summary {
   padding-right: 5px;
 }
 
-#rcvlovzbdf .gt_first_grand_summary_row {
+#hnxwrdmkme .gt_first_grand_summary_row {
   padding-top: 8px;
   /* grand_summary_row.padding */
   padding-bottom: 8px;
@@ -1198,7 +1198,7 @@ summary {
   /* grand_summary_row.border.color */
 }
 
-#rcvlovzbdf .gt_table_body {
+#hnxwrdmkme .gt_table_body {
   border-top-style: solid;
   /* table_body.border.top.style */
   border-top-width: 2px;
@@ -1213,7 +1213,7 @@ summary {
   /* table_body.border.bottom.color */
 }
 
-#rcvlovzbdf .gt_footnotes {
+#hnxwrdmkme .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   /* footnotes.background.color */
@@ -1237,7 +1237,7 @@ summary {
   /* footnotes.border.lr.color */
 }
 
-#rcvlovzbdf .gt_footnote {
+#hnxwrdmkme .gt_footnote {
   margin: 0px;
   font-size: 90%;
   /* footnotes.font.size */
@@ -1245,7 +1245,7 @@ summary {
   /* footnotes.padding */
 }
 
-#rcvlovzbdf .gt_sourcenotes {
+#hnxwrdmkme .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   /* source_notes.background.color */
@@ -1269,48 +1269,48 @@ summary {
   /* source_notes.border.lr.style */
 }
 
-#rcvlovzbdf .gt_sourcenote {
+#hnxwrdmkme .gt_sourcenote {
   font-size: 90%;
   /* source_notes.font.size */
   padding: 4px;
   /* source_notes.padding */
 }
 
-#rcvlovzbdf .gt_left {
+#hnxwrdmkme .gt_left {
   text-align: left;
 }
 
-#rcvlovzbdf .gt_center {
+#hnxwrdmkme .gt_center {
   text-align: center;
 }
 
-#rcvlovzbdf .gt_right {
+#hnxwrdmkme .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#rcvlovzbdf .gt_font_normal {
+#hnxwrdmkme .gt_font_normal {
   font-weight: normal;
 }
 
-#rcvlovzbdf .gt_font_bold {
+#hnxwrdmkme .gt_font_bold {
   font-weight: bold;
 }
 
-#rcvlovzbdf .gt_font_italic {
+#hnxwrdmkme .gt_font_italic {
   font-style: italic;
 }
 
-#rcvlovzbdf .gt_super {
+#hnxwrdmkme .gt_super {
   font-size: 65%;
 }
 
-#rcvlovzbdf .gt_footnote_marks {
+#hnxwrdmkme .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="rcvlovzbdf" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="hnxwrdmkme" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   <thead class="gt_header">
     <tr>
       <th colspan="4" class="gt_heading gt_title gt_font_normal gt_center" style>Effect of Number of Migrants on Amount of Remittances</th>
@@ -1347,8 +1347,8 @@ summary {
 </div>
 <div id="b" class="section level3">
 <h3>2B)</h3>
-<p>When both our independent variable and dependent variable are logged, we can interpret the regression results as an elasticity. In other words, the coefficient is the estimated percent change in your dependent variable for a percent change in your independent variable. You can read more about this here.</p>
-<p>In fewer than 100 words, explain what your regression tells us about the estimated average treatment effect of more migrants. Provide both the Frequentist and Bayesian interpretation of this coefficient.</p>
+<p>The estimate for log_migrants is 0.84, which tells us that <em>on average</em>, a 1% increase in migrants is associated with an increase of 0.84% for remittances. Unfortunately, we can’t say for certain that this is causal, since we haven’t taken all other possible variables into consideration. There is also an element of uncertainty; the lower and upper bounds of log_migrants indicate that the actual average increase in remittances associated with a 1% increase in migrants could be as low as 0.77% or as high as 0.90%.</p>
+<p>The Bayesian interpretation of this interval is that we can be 95% confident (i.e. there’s a 95% chance) that the true average treatment effect on remittances of a 1% increase in migrants lies between 0.77% and 0.90%. The frequentist interpretation is that if we ran this same model repeatedly, it would generate an interval containing the true average treatment effect 95% of the time.</p>
 </div>
 <div id="c-estimating-fitted-values" class="section level3">
 <h3>2C) Estimating Fitted Values</h3>
