--- a/exam_3.html
+++ b/exam_3.html
@@ -385,7 +385,7 @@ summary {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#vkdedjbohf .gt_table {
+#wmuzuetplp .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -413,7 +413,7 @@ summary {
   /* table.border.bottom.color */
 }
 
-#vkdedjbohf .gt_heading {
+#wmuzuetplp .gt_heading {
   background-color: #FFFFFF;
   /* heading.background.color */
   border-bottom-color: #FFFFFF;
@@ -432,7 +432,7 @@ summary {
   /* heading.border.lr.color */
 }
 
-#vkdedjbohf .gt_title {
+#wmuzuetplp .gt_title {
   color: #333333;
   font-size: 125%;
   /* heading.title.font.size */
@@ -446,7 +446,7 @@ summary {
   border-bottom-width: 0;
 }
 
-#vkdedjbohf .gt_subtitle {
+#wmuzuetplp .gt_subtitle {
   color: #333333;
   font-size: 85%;
   /* heading.subtitle.font.size */
@@ -460,7 +460,7 @@ summary {
   border-top-width: 0;
 }
 
-#vkdedjbohf .gt_bottom_border {
+#wmuzuetplp .gt_bottom_border {
   border-bottom-style: solid;
   /* heading.border.bottom.style */
   border-bottom-width: 2px;
@@ -469,7 +469,7 @@ summary {
   /* heading.border.bottom.color */
 }
 
-#vkdedjbohf .gt_column_spanner {
+#wmuzuetplp .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -477,7 +477,7 @@ summary {
   padding-bottom: 4px;
 }
 
-#vkdedjbohf .gt_col_headings {
+#wmuzuetplp .gt_col_headings {
   border-top-style: solid;
   /* column_labels.border.top.style */
   border-top-width: 2px;
@@ -504,7 +504,7 @@ summary {
   /* column_labels.border.lr.color */
 }
 
-#vkdedjbohf .gt_col_heading {
+#wmuzuetplp .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   /* column_labels.background.color */
@@ -520,11 +520,11 @@ summary {
   overflow-x: hidden;
 }
 
-#vkdedjbohf .gt_sep_right {
+#wmuzuetplp .gt_sep_right {
   border-right: 5px solid #FFFFFF;
 }
 
-#vkdedjbohf .gt_group_heading {
+#wmuzuetplp .gt_group_heading {
   padding: 8px;
   /* row_group.padding */
   color: #333333;
@@ -563,7 +563,7 @@ summary {
   vertical-align: middle;
 }
 
-#vkdedjbohf .gt_empty_group_heading {
+#wmuzuetplp .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -587,20 +587,20 @@ summary {
   vertical-align: middle;
 }
 
-#vkdedjbohf .gt_striped {
+#wmuzuetplp .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
   /* row.striping.background_color */
 }
 
-#vkdedjbohf .gt_from_md > :first-child {
+#wmuzuetplp .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#vkdedjbohf .gt_from_md > :last-child {
+#wmuzuetplp .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#vkdedjbohf .gt_row {
+#wmuzuetplp .gt_row {
   padding-top: 8px;
   /* data_row.padding */
   padding-bottom: 8px;
@@ -630,7 +630,7 @@ summary {
   overflow-x: hidden;
 }
 
-#vkdedjbohf .gt_stub {
+#wmuzuetplp .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   /* stub.background.color */
@@ -647,7 +647,7 @@ summary {
   padding-left: 12px;
 }
 
-#vkdedjbohf .gt_summary_row {
+#wmuzuetplp .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* summary_row.background.color */
@@ -661,7 +661,7 @@ summary {
   padding-right: 5px;
 }
 
-#vkdedjbohf .gt_first_summary_row {
+#wmuzuetplp .gt_first_summary_row {
   padding-top: 8px;
   /* summary_row.padding */
   padding-bottom: 8px;
@@ -676,7 +676,7 @@ summary {
   /* summary_row.border.color */
 }
 
-#vkdedjbohf .gt_grand_summary_row {
+#wmuzuetplp .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* grand_summary_row.background.color */
@@ -690,7 +690,7 @@ summary {
   padding-right: 5px;
 }
 
-#vkdedjbohf .gt_first_grand_summary_row {
+#wmuzuetplp .gt_first_grand_summary_row {
   padding-top: 8px;
   /* grand_summary_row.padding */
   padding-bottom: 8px;
@@ -705,7 +705,7 @@ summary {
   /* grand_summary_row.border.color */
 }
 
-#vkdedjbohf .gt_table_body {
+#wmuzuetplp .gt_table_body {
   border-top-style: solid;
   /* table_body.border.top.style */
   border-top-width: 2px;
@@ -720,7 +720,7 @@ summary {
   /* table_body.border.bottom.color */
 }
 
-#vkdedjbohf .gt_footnotes {
+#wmuzuetplp .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   /* footnotes.background.color */
@@ -744,7 +744,7 @@ summary {
   /* footnotes.border.lr.color */
 }
 
-#vkdedjbohf .gt_footnote {
+#wmuzuetplp .gt_footnote {
   margin: 0px;
   font-size: 90%;
   /* footnotes.font.size */
@@ -752,7 +752,7 @@ summary {
   /* footnotes.padding */
 }
 
-#vkdedjbohf .gt_sourcenotes {
+#wmuzuetplp .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   /* source_notes.background.color */
@@ -776,48 +776,48 @@ summary {
   /* source_notes.border.lr.style */
 }
 
-#vkdedjbohf .gt_sourcenote {
+#wmuzuetplp .gt_sourcenote {
   font-size: 90%;
   /* source_notes.font.size */
   padding: 4px;
   /* source_notes.padding */
 }
 
-#vkdedjbohf .gt_left {
+#wmuzuetplp .gt_left {
   text-align: left;
 }
 
-#vkdedjbohf .gt_center {
+#wmuzuetplp .gt_center {
   text-align: center;
 }
 
-#vkdedjbohf .gt_right {
+#wmuzuetplp .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#vkdedjbohf .gt_font_normal {
+#wmuzuetplp .gt_font_normal {
   font-weight: normal;
 }
 
-#vkdedjbohf .gt_font_bold {
+#wmuzuetplp .gt_font_bold {
   font-weight: bold;
 }
 
-#vkdedjbohf .gt_font_italic {
+#wmuzuetplp .gt_font_italic {
   font-style: italic;
 }
 
-#vkdedjbohf .gt_super {
+#wmuzuetplp .gt_super {
   font-size: 65%;
 }
 
-#vkdedjbohf .gt_footnote_marks {
+#wmuzuetplp .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="vkdedjbohf" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="wmuzuetplp" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   <thead class="gt_header">
     <tr>
       <th colspan="2" class="gt_heading gt_title gt_font_normal gt_center" style>Correlation between Migrants and Remittances by Year</th>
@@ -870,15 +870,15 @@ summary {
 <p>The correlation coefficient from 2015 supports my hypothesis from 1A. There appears to be a strong positive correlation between the (logged) number of migrants and the (logged) amount of remittance outflows, meaning that an increase in one is closely associated with an increase in the other.</p>
 </div>
 </div>
-<div id="running-and-interpreting-regressions" class="section level2">
-<h2>2) Running and Interpreting Regressions</h2>
-<div id="a" class="section level3">
-<h3>2A)</h3>
+<div id="question-2-running-and-interpreting-regressions" class="section level2">
+<h2>Question 2: Running and Interpreting Regressions</h2>
+<div id="a-run-a-regression" class="section level3">
+<h3>2A) Run a regression</h3>
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#hnxwrdmkme .gt_table {
+#ceasfgnvaj .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -906,7 +906,7 @@ summary {
   /* table.border.bottom.color */
 }
 
-#hnxwrdmkme .gt_heading {
+#ceasfgnvaj .gt_heading {
   background-color: #FFFFFF;
   /* heading.background.color */
   border-bottom-color: #FFFFFF;
@@ -925,7 +925,7 @@ summary {
   /* heading.border.lr.color */
 }
 
-#hnxwrdmkme .gt_title {
+#ceasfgnvaj .gt_title {
   color: #333333;
   font-size: 125%;
   /* heading.title.font.size */
@@ -939,7 +939,7 @@ summary {
   border-bottom-width: 0;
 }
 
-#hnxwrdmkme .gt_subtitle {
+#ceasfgnvaj .gt_subtitle {
   color: #333333;
   font-size: 85%;
   /* heading.subtitle.font.size */
@@ -953,7 +953,7 @@ summary {
   border-top-width: 0;
 }
 
-#hnxwrdmkme .gt_bottom_border {
+#ceasfgnvaj .gt_bottom_border {
   border-bottom-style: solid;
   /* heading.border.bottom.style */
   border-bottom-width: 2px;
@@ -962,7 +962,7 @@ summary {
   /* heading.border.bottom.color */
 }
 
-#hnxwrdmkme .gt_column_spanner {
+#ceasfgnvaj .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -970,7 +970,7 @@ summary {
   padding-bottom: 4px;
 }
 
-#hnxwrdmkme .gt_col_headings {
+#ceasfgnvaj .gt_col_headings {
   border-top-style: solid;
   /* column_labels.border.top.style */
   border-top-width: 2px;
@@ -997,7 +997,7 @@ summary {
   /* column_labels.border.lr.color */
 }
 
-#hnxwrdmkme .gt_col_heading {
+#ceasfgnvaj .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   /* column_labels.background.color */
@@ -1013,11 +1013,11 @@ summary {
   overflow-x: hidden;
 }
 
-#hnxwrdmkme .gt_sep_right {
+#ceasfgnvaj .gt_sep_right {
   border-right: 5px solid #FFFFFF;
 }
 
-#hnxwrdmkme .gt_group_heading {
+#ceasfgnvaj .gt_group_heading {
   padding: 8px;
   /* row_group.padding */
   color: #333333;
@@ -1056,7 +1056,7 @@ summary {
   vertical-align: middle;
 }
 
-#hnxwrdmkme .gt_empty_group_heading {
+#ceasfgnvaj .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -1080,20 +1080,20 @@ summary {
   vertical-align: middle;
 }
 
-#hnxwrdmkme .gt_striped {
+#ceasfgnvaj .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
   /* row.striping.background_color */
 }
 
-#hnxwrdmkme .gt_from_md > :first-child {
+#ceasfgnvaj .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#hnxwrdmkme .gt_from_md > :last-child {
+#ceasfgnvaj .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#hnxwrdmkme .gt_row {
+#ceasfgnvaj .gt_row {
   padding-top: 8px;
   /* data_row.padding */
   padding-bottom: 8px;
@@ -1123,7 +1123,7 @@ summary {
   overflow-x: hidden;
 }
 
-#hnxwrdmkme .gt_stub {
+#ceasfgnvaj .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   /* stub.background.color */
@@ -1140,7 +1140,7 @@ summary {
   padding-left: 12px;
 }
 
-#hnxwrdmkme .gt_summary_row {
+#ceasfgnvaj .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* summary_row.background.color */
@@ -1154,7 +1154,7 @@ summary {
   padding-right: 5px;
 }
 
-#hnxwrdmkme .gt_first_summary_row {
+#ceasfgnvaj .gt_first_summary_row {
   padding-top: 8px;
   /* summary_row.padding */
   padding-bottom: 8px;
@@ -1169,7 +1169,7 @@ summary {
   /* summary_row.border.color */
 }
 
-#hnxwrdmkme .gt_grand_summary_row {
+#ceasfgnvaj .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* grand_summary_row.background.color */
@@ -1183,7 +1183,7 @@ summary {
   padding-right: 5px;
 }
 
-#hnxwrdmkme .gt_first_grand_summary_row {
+#ceasfgnvaj .gt_first_grand_summary_row {
   padding-top: 8px;
   /* grand_summary_row.padding */
   padding-bottom: 8px;
@@ -1198,7 +1198,7 @@ summary {
   /* grand_summary_row.border.color */
 }
 
-#hnxwrdmkme .gt_table_body {
+#ceasfgnvaj .gt_table_body {
   border-top-style: solid;
   /* table_body.border.top.style */
   border-top-width: 2px;
@@ -1213,7 +1213,7 @@ summary {
   /* table_body.border.bottom.color */
 }
 
-#hnxwrdmkme .gt_footnotes {
+#ceasfgnvaj .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   /* footnotes.background.color */
@@ -1237,7 +1237,7 @@ summary {
   /* footnotes.border.lr.color */
 }
 
-#hnxwrdmkme .gt_footnote {
+#ceasfgnvaj .gt_footnote {
   margin: 0px;
   font-size: 90%;
   /* footnotes.font.size */
@@ -1245,7 +1245,7 @@ summary {
   /* footnotes.padding */
 }
 
-#hnxwrdmkme .gt_sourcenotes {
+#ceasfgnvaj .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   /* source_notes.background.color */
@@ -1269,48 +1269,48 @@ summary {
   /* source_notes.border.lr.style */
 }
 
-#hnxwrdmkme .gt_sourcenote {
+#ceasfgnvaj .gt_sourcenote {
   font-size: 90%;
   /* source_notes.font.size */
   padding: 4px;
   /* source_notes.padding */
 }
 
-#hnxwrdmkme .gt_left {
+#ceasfgnvaj .gt_left {
   text-align: left;
 }
 
-#hnxwrdmkme .gt_center {
+#ceasfgnvaj .gt_center {
   text-align: center;
 }
 
-#hnxwrdmkme .gt_right {
+#ceasfgnvaj .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#hnxwrdmkme .gt_font_normal {
+#ceasfgnvaj .gt_font_normal {
   font-weight: normal;
 }
 
-#hnxwrdmkme .gt_font_bold {
+#ceasfgnvaj .gt_font_bold {
   font-weight: bold;
 }
 
-#hnxwrdmkme .gt_font_italic {
+#ceasfgnvaj .gt_font_italic {
   font-style: italic;
 }
 
-#hnxwrdmkme .gt_super {
+#ceasfgnvaj .gt_super {
   font-size: 65%;
 }
 
-#hnxwrdmkme .gt_footnote_marks {
+#ceasfgnvaj .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="hnxwrdmkme" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="ceasfgnvaj" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   <thead class="gt_header">
     <tr>
       <th colspan="4" class="gt_heading gt_title gt_font_normal gt_center" style>Effect of Number of Migrants on Amount of Remittances</th>
@@ -1345,16 +1345,24 @@ summary {
   
 </table></div>
 </div>
-<div id="b" class="section level3">
-<h3>2B)</h3>
+<div id="b-interpret-the-results" class="section level3">
+<h3>2B) Interpret the results</h3>
 <p>The estimate for log_migrants is 0.84, which tells us that <em>on average</em>, a 1% increase in migrants is associated with an increase of 0.84% for remittances. Unfortunately, we can’t say for certain that this is causal, since we haven’t taken all other possible variables into consideration. There is also an element of uncertainty; the lower and upper bounds of log_migrants indicate that the actual average increase in remittances associated with a 1% increase in migrants could be as low as 0.77% or as high as 0.90%.</p>
 <p>The Bayesian interpretation of this interval is that we can be 95% confident (i.e. there’s a 95% chance) that the true average treatment effect on remittances of a 1% increase in migrants lies between 0.77% and 0.90%. The frequentist interpretation is that if we ran this same model repeatedly, it would generate an interval containing the true average treatment effect 95% of the time.</p>
 </div>
-<div id="c-estimating-fitted-values" class="section level3">
-<h3>2C) Estimating Fitted Values</h3>
-<p>In 2015, the value for the United States’ logged number of migrants was 17.69. Write out the formula that you would use to calculate the fitted value, or predicted log remittances, for the US in that year, given the results in your tibble above. Then, check your work by pulling the relevant fitted value using the augment or predict command. Print the code you use for augment or predict so that we can see both methods. If you use augment, remember that you can add a data = command so that you can filter your augmented data to the relevant observations for the USA in 2015. Note that your predicted values from the formula may differ slightly from your augment or predict value if you rounded your coefficients.</p>
-<p>You can format a mathematical equation in an R markdown document by using two pairs of dollar signs. Example: <span class="math display">\[ y = 100.6 + 1.3 * x \]</span> gives you:</p>
-<p>y=100.6+1.3∗x</p>
+<div id="c-estimate-fitted-values" class="section level3">
+<h3>2C) Estimate fitted values</h3>
+<p>The formula for estimating a fitted value based on our model is</p>
+<p><span class="math display">\[ \hat y = b_0 + b_1 * x \]</span></p>
+<p>where <span class="math inline">\(\hat y\)</span> is the predicted value of log_remittances, <span class="math inline">\(b_0\)</span> is the intercept, <span class="math inline">\(b_1\)</span> is the slope coefficient (the estimate of log_migrants from our table in 2A), and <span class="math inline">\(x\)</span> is the value of log_migrants we will use to predict log_remittances. Plugging in values from the table, when the logged number of migrants is 17.69, as it was for the United States in 2015, we get</p>
+<p><span class="math display">\[ \hat y = -5.63 + 0.84 * 17.69 = 9.2296 \]</span></p>
+<p>which is essentially the same as R’s predict() function outputs. (The predictions differ slightly since we rounded values in the formula.)</p>
+<pre class="r"><code># predicting the logged remittances when log_migrants = 17.69
+
+predict(lm(log_remittances ~ log_migrants, data = joined),
+        tibble(log_migrants = 17.69))</code></pre>
+<pre><code>##        1 
+## 9.145655</code></pre>
 </div>
 </div>
 
